# claude-wrapper

./: CLAUDE.md  DESIGN.md  LICENSE  README.md  TASKS.md  pyproject.toml
claude_wrapper/: __init__.py  cli.py  config.py  incus.py  lifecycle.py  mcp.py  mounts.py  provision.py
scripts/: list_sandboxes.sh  verify_cwd_guard.py
tests/: test_config.py  test_exec_env.py  test_host_install.py  test_lifecycle_build_id.py  test_lifecycle_names.py  test_lifecycle_reaper.py  test_lifecycle_stamp.py  test_mcp.py  test_mounts.py  test_subid_range.py
