[build-system]
requires = ["setuptools>=77"]      # PEP 639 SPDX license expression support
build-backend = "setuptools.build_meta"

[project]
name = "claude-wrapper"
version = "0.1.0"
description = "Run the claude CLI inside an isolated incus sandbox."
readme = "DESIGN.md"
requires-python = ">=3.11"        # tomllib is stdlib from 3.11
license = "MIT"
license-files = ["LICENSE"]
dependencies = []                  # stdlib only by design

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
claude-wrapper = "claude_wrapper.cli:main"

[tool.setuptools]
packages = ["claude_wrapper"]
